# laundry

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md
.claude/: settings.local.json
.github/workflows/: deploy-backend-staging.yml  deploy-backend.yml  deploy-frontend-staging.yml  deploy-frontend.yml  test.yml
backend/: .env.example  pyproject.toml
backend/scripts/: generate_force_qr.py  generate_qr.py
backend/src/laundry/: __init__.py  config.py  main.py
backend/src/laundry/api/: auth.py  ratelimit.py  routes.py  schemas.py
backend/src/laundry/bot/: handlers.py  notifications.py
backend/src/laundry/db/: database.py  seed.py
backend/src/laundry/models/: __init__.py  machine.py  powerup.py  session.py  user.py
backend/src/laundry/services/: coin_service.py  machine_service.py  powerup_service.py  reminder_service.py  session_service.py  user_service.py
backend/tests/: conftest.py  test_api.py  test_rate_limiting.py  test_services.py
backend/tests/services/: test_session_service.py
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ClaimModal.tsx  MachineCard.tsx  MachineGrid.tsx  Navigation.tsx  PingModal.tsx
frontend/src/hooks/: useMachines.ts  usePowerups.ts  useTelegram.ts
frontend/src/pages/: ForceRelease.tsx  Home.tsx  MyMachines.tsx  Powerups.tsx  Profile.tsx  Register.tsx
frontend/src/styles/: globals.css
tasks/: todo.md
